k8s-yaml/roles/nexus/files/nexus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: nexus3
  name: nexus3
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: nexus3
  template:
    metadata:
      labels:
        k8s-app: nexus3
      name: nexus3
      namespace: devops
    spec:
      nodeSelector:
        k8s-app: nexus3
      containers:
        - name: nexus3
          image: sonatype/nexus3:3.42.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: nexus-web
              protocol: TCP
          #livenessProbe:
          #  httpGet:
          #    path: /
          #    port: 8081
          #  initialDelaySeconds: 60
          #  periodSeconds: 30
          #  failureThreshold: 6
          #readinessProbe:
          #  httpGet:
          #    path: /
          #    port: 8081
          #  initialDelaySeconds: 60
          #  periodSeconds: 30
          #  failureThreshold: 6
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: nexus-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nexus3
  namespace: devops
  labels:
    k8s-app: nexus3
spec:
  selector:
    k8s-app: nexus3
  type: ClusterIP
  ports:
    - name: nexus-web
      protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus3
  namespace: devops
  labels:
    k8s-app: nexus3
spec:
  ingressClassName: nginx
  rules:
    - host: "nexus.wax.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: nexus3
                port:
                  number: 8081
#  tls:
#    - hosts:
#        - nexus.wax.com
#      secretName: tls-nexus
